--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,8 +8,8 @@
     <!-- TODO: Update blank fragment layout -->
     <GridView
         android:id="@+id/gv_movie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:numColumns="2">
     </GridView>
 
