--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorHeadingBack">#009788</color>
+    <color name="colorButton">#99F8F5</color>
+    <color name="colorText">#828282</color>
+
 </resources>
