--- a/app/src/main/res/menu/activiy_main.xml
+++ b/app/src/main/res/menu/activiy_main.xml
@@ -10,8 +10,8 @@
             app:showAsAction="never"></item>
 
         <item
-            android:id="@+id/highest_popular"
-            android:title="highest popular"
+            android:id="@+id/highest_rated"
+            android:title="highest rated"
             app:showAsAction="never"></item>
 
         <item
