--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,12 +6,18 @@
     tools:context="example.com.udacitymovie.MainFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <GridView
-        android:id="@+id/gv_movie"
+    <!--<GridView-->
+        <!--android:id="@+id/gv_movie"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:numColumns="2">-->
+    <!--</GridView>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_movie"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="2">
-    </GridView>
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
 
 </FrameLayout>
